--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Price</th>
+      <th>Description</th>
       <th></th>
       <th></th>
       <th></th>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= product.name %></td>
         <td><%= product.price %></td>
+        <td><%= product.description %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
