--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WebServiceRails</title>
+  <title>商品瀏覽</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
- <p class="notice"><%= notice %></p>
- <p class="alert"><%= alert %></p>
+<div class="container-fluid">
+	<%= render "common/navbar" %>
+	<%= notice_message  %>
+	<%= yield %>
+</div>
 
-<%= yield %>
+<%= render "common/footbar" %>
 
 </body>
 </html>
