--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,28 +1,19 @@
-<h1>Listing products</h1>
-<p> Your email: <%= current_user.email %></p>
-<table>
-  <thead>
-    <tr>
-      <th>Picture</th>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Description</th>
-    </tr>
-  </thead>
+<div class="col-md-12"> 
+  <table class="table table-hover">
+    <tbody>
+      <% @products.each do |product| %>
+        <tr>
+          <td><%= image_tag(product.image_url, :class => 'list_image') %></td>
+          <td>
+            <%= link_to product.name, product_path(product) %><br>
+            <%= truncate(strip_tags(product.description), :length => 60) %>
+          </td>
+          <td><%= number_to_currency(product.price) %></td>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= image_tag(product.image_url, :class => 'list_image') %></td>
-        <td><%= link_to product.name, product_path(product) %></td>
-        <td><%= number_to_currency(product.price) %></td>
-        <td>
-          <%= truncate(strip_tags(product.description), :length => 60) %>
-        </td>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+  <br>
+</div>
