--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,17 +1,22 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-12"> 
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+	<h1>
+	  <%= @product.name %>
+	</h1>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+	<h1>
+	  <%= image_tag(@product.image_url, :class => 'list_image') %>
+	</h1>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-<%= link_to 'Back', products_path %>
+	<p class="lead">
+	  <%= raw(@product.description) %>
+	</p>
+
+	<p>
+	  <%= number_to_currency(@product.price) %>
+	</p>
+
+	<hr>
+	<%= link_to 'Back', products_path, :class => "btn btn-default" %>
+</div>
