--- a/app/views/users/registrations/new.erb
+++ b/app/views/users/registrations/new.erb
@@ -1,25 +1,33 @@
-<h2>Sign up</h2>
+<div class="col-md-4 col-md-offset-4">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <h2 class="text-center">註冊</h2>
+  <hr>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+    <div class="form-inputs">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, :class => "form-control" %>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+      <%= f.label :password %><br />
+      <%= f.password_field :password, autocomplete: "off", :class => "form-control" %>
 
-  <div><%= f.label :phone %><br />
-    <%= f.text_field :phone %></div>
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
 
-  <div><%= f.label :address %><br />
-    <%= f.text_field :address %></div>
+      <%= f.label :phone %><br />
+        <%= f.text_field :phone, :class => "form-control" %>
 
-  <div><%= f.submit "Sign up" %></div>
+      <%= f.label :address %><br />
+      <%= f.text_field :address, :class => "form-control" %>
+    </div>
 
-<% end %>
+    <hr>
+    <div><%= f.submit "Sign up" %></div>
 
-<%= render "devise/shared/links" %>
+  <% end %>
+
+  <hr>
+  <%= render "devise/shared/links" %>
+</div>
