--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -8,25 +8,25 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <% if !current_user %>
-        <li> <%= link_to("註冊", new_user_registration_path) %> </li>
-        <li> <%= link_to("登入", new_user_session_path) %> </li>
-        <li> <%= link_to("登入後台", new_admin_user_path) %> </li>
+        <% unless current_user %>
+          <li> <%= link_to("註冊", new_user_registration_path) %> </li>
+          <li> <%= link_to("登入", new_user_session_path) %> </li>
+          <li> <%= link_to("登入後台", new_admin_user_path) %> </li>
         <% else %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Hi!, <%= current_user.email %>  
-            <b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu">
-            <li> 
-              <%= link_to("登出", destroy_user_session_path, :method => :delete ) %>
-            </li>
-            <li>
-              <%= link_to("登入後台", new_admin_user_path) %>
-            </li>
-          </ul>
-        </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Hi!, <%= current_user.name %>  
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li> 
+                <%= link_to("登出", destroy_user_session_path, :method => :delete ) %>
+              </li>
+              <li>
+                <%= link_to("登入後台", new_admin_user_path) %>
+              </li>
+            </ul>
+          </li>
         <% end %>
         
       </ul>
